Added flask-bootstrap and base.html

--- a/templates/artists.html
+++ b/templates/artists.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get my tattoo</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
     {% for artist in artists %}
         {{ artist.artist_name }}<br>
         {{ artist.address }}<br>
@@ -24,5 +18,4 @@
         {{ artist.photo_3 }}<br>
         <br>
     {% endfor %}
-</body>
-</html>
+{% endblock %}
