--- a/templates/artists.html
+++ b/templates/artists.html
@@ -1,5 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="row">
+	<div class="col-sm-12">
+		<h3>Last added</h3>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-12 col-md-6 col-lg-8">
+	</div>
+	<div class="col-sm-12 col-md-6 col-lg-4">
+		<img src="{{ url_for('static', filename='images/background.jpg') }}" class="background-image" alt="background image, bearded man with tattoos">
+</div>
+	</div>
+
+
     {% for artist in artists %}
         {{ artist.artist_name }}<br>
         {{ artist.address }}<br>
