--- a/templates/artists.html
+++ b/templates/artists.html
@@ -2,34 +2,58 @@
 {% block content %}
 <div class="row">
 	<div class="col-sm-12">
-		<h3>Last added</h3>
+		<h3 class="subtitle center">Last added</h3>
 	</div>
 </div>
-<div class="row">
-	<div class="col-sm-12 col-md-6 col-lg-8">
-	</div>
-	<div class="col-sm-12 col-md-6 col-lg-4">
-		<img src="{{ url_for('static', filename='images/background.jpg') }}" class="background-image" alt="background image, bearded man with tattoos">
-</div>
-	</div>
+<!--Card with Artist Profile-->
+{% for artist in artists %}
+<div class="row card-artist">
+	<div class="col-sm-12">
+		<div class="row">
+			<div class="col col-sm-12 col-lg-8">
+				<div class="row panel">
+					<div class="col col-sm-12 col-md-6">
+						<div class="card" style="width: 100%;">
+							<img class="card-img-top img-panel" src="{{ artist.profile_url }}" alt="Profile picture for {{ artist.artist_name }}">
+                </div>
+						</div>
+						<div class="col col-sm-12 col-md-6">
+							<h5 class="card-title">{{ artist.artist_name }}</h5>
+							<p class="card-text">{{ artist.bio }}</p>
+							<a href="#" class="link">Go to {{ artist.artist_name }}'s page</a>
+						</div>
+					</div>
+				</div>
+				<div class="col col-lg-4 d-none d-lg-block">
+					<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img src="{{ artist.photo_1 }}" class="d-block w-100 img-panel" alt="...">
+    </div>
+								<div class="carousel-item">
+									<img src="{{ artist.photo_2 }}" class="d-block w-100 img-panel" alt="...">
+    </div>
+									<div class="carousel-item">
+										<img src="{{ artist.photo_3 }}" class="d-block w-100 img-panel" alt="...">
+    </div>
+									</div>
+									<a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+										data-slide="prev">
+										<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+										<span class="sr-only">Previous</span>
+									</a>
+									<a class="carousel-control-next" href="#carouselExampleControls" role="button"
+										data-slide="next">
+										<span class="carousel-control-next-icon" aria-hidden="true"></span>
+										<span class="sr-only">Next</span>
+									</a>
+								</div>
+							</div>
+						</div>
+						<hr>
+						<hr>
+						{% endfor %}
 
-
-    {% for artist in artists %}
-        {{ artist.artist_name }}<br>
-        {{ artist.address }}<br>
-        {{ artist.city }}<br>
-        {{ artist.phone }}<br>
-        {{ artist.email }}<br>
-        {{ artist.instagram }}<br>
-        {{ artist.facebook }}<br>
-        {{ artist.profile_url }}<br>
-        {{ artist.languages }}<br>
-        {{ artist.style }}<br>
-        {{ artist.bio }}<br>
-        {{ artist.created_by }}<br>
-        {{ artist.photo_1 }}<br>
-        {{ artist.photo_2 }}<br>
-        {{ artist.photo_3 }}<br>
-        <br>
-    {% endfor %}
-{% endblock %}
+					</div>
+				</div>
+				{% endblock %}
