--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 <body>
 <!--Navbar with dropdown menu-->
 <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-black">
-  <a class="navbar-brand logo" href="#">Get My tattoo<br>
+  <a class="navbar-brand logo" href="{{ url_for('get_artists') }}">Get My tattoo<br>
   <span>estd &middot; 2020</span>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,14 +21,14 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ url_for('get_artists') }}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Are you an artist?
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Register</a>
+          <a class="dropdown-item" href="{{ url_for('register') }}">Register</a>
           <a class="dropdown-item" href="#">Log In</a>
           <a class="dropdown-item" href="#">Log Out</a>
         </div>
