--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,8 +31,11 @@ main div h2.center{
 }
 
 .subtitle{
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: 20px;
+    letter-spacing: 5px;
 }
 
 /* Placing */
@@ -111,6 +114,12 @@ object-fit: cover;
     border-radius: 25px;
 }
 
+legend{
+    color: black;
+    text-align: center;
+    margin-top: 30px;
+}
+
 .form-input{
     border:none;
     border-bottom: 1px solid black;
@@ -121,9 +130,26 @@ object-fit: cover;
 }
 
 .form-input:hover{
-    border-bottom: 2px solid antiquewhite;
+    border-bottom: 2px solid #E8E8E8;
     cursor: pointer;
 }
+
+.form-input:focus{
+    /* Box shadow from https://css-tricks.com/almanac/properties/b/box-shadow/ */
+    box-shadow: 0 8px 6px -6px black;
+    background-color: #E8E8E8;
+    border-radius: 25px;
+}
+
+span.input-group-text{
+    background-color: gray;
+    border: none;
+}
+
+.form-icon{
+    font-size: 30px;
+}
+
 
 /* Code adapted from https://www.w3schools.com/howto/howto_css_placeholder.asp */
 .form-input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -138,4 +164,29 @@ object-fit: cover;
 .form-input::-ms-input-placeholder { /* Microsoft Edge */
   color: black
 }
+
+button{
+    margin-top: 30px;
+    box-shadow: 0 8px 6px -6px black;
+}
 /* Media Queries */
+@media (max-width: 991px){
+    .background-image{
+        margin-right: 0;
+    }
+    form.col.col-md-6.offset-md-1.sign-panel{
+        margin-left: 0;
+    }
+}
+
+@media (max-width: 768px){
+    .background-image{
+        background-image: none;
+        margin: auto;
+        padding: 5px;
+        width: 90%;
+    }
+    form.col.col-md-6.offset-md-1.sign-panel{
+    margin: 0 auto;
+    }
+}
