--- a/templates/register.html
+++ b/templates/register.html
@@ -1,18 +1,30 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container-fluid background-image">
+<div class="container background-image">
 	<div class="row">
-		<form class="col col-md-6 offset-md-1 sign-panel">
-            <h3 class="subtitle">Register</h3>
+		<form class="col col-md-6 offset-md-1 sign-panel" action="" method="POST">
+            <legend class="subtitle">Hello, artist!
+            <br>Please register here</legend>
 			<div class="form-group">
 				<label for="username" class="d-none">Username</label>
-				<input type="text" class="form-control form-input" id="username" placeholder="Username">
-			</div>
+				<div class="input-group input-group-sm">
+					<div class="input-group-prepend">
+						<span class="input-group-text"><i class="fa fa-user form-icon"></i></span>
+					</div>
+					<input type="text" class="form-control form-input" id="username" placeholder="Choose a username" required>
+			    </div>
+				</div>
+			
             <div class="form-group">
-				<label for="password" class="d-none">Username</label>
-				<input type="text" class="form-control form-input" id="password" placeholder="Password">
+				<label for="password" class="d-none">Password</label>
+                <div class="input-group input-group-sm">
+					<div class="input-group-prepend">
+						<span class="input-group-text"><i class="fa fa-lock form-icon"></i></span>
+					</div>
+				<input type="text" class="form-control form-input" id="password" placeholder="Choose a password" required>
 			</div>
-            <button class="btn btn-light" type="submit">Button</button>
+            </div>
+            <button class="btn btn-light btn-block" type="submit">Submit</button>
 		</form>
 	</div>
 </div>
