--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Shadows+Into+Light&display=swap');
 
 /* Colours */
 body{
@@ -36,6 +36,14 @@ main div h2.center{
     text-transform: uppercase;
     font-size: 20px;
     letter-spacing: 5px;
+}
+
+h4.flash{
+    font-family: "Shadows Into Light", cursive;
+    font-size: 30px;
+    text-align: center;
+    color: #E8E8E8;
+    margin-bottom: 30px;
 }
 
 /* Placing */
@@ -134,7 +142,7 @@ legend{
     cursor: pointer;
 }
 
-.form-input:focus{
+.form-input:focus, .form-input:active{
     /* Box shadow from https://css-tricks.com/almanac/properties/b/box-shadow/ */
     box-shadow: 0 8px 6px -6px black;
     background-color: #E8E8E8;
@@ -169,6 +177,11 @@ button{
     margin-top: 30px;
     box-shadow: 0 8px 6px -6px black;
 }
+
+button.btn:hover, button.btn:focus{
+    background-color: black;
+}
+
 /* Media Queries */
 @media (max-width: 991px){
     .background-image{
