--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container background-image">
 	<div class="row">
-		<form class="col col-md-6 offset-md-1 sign-panel" action="" method="POST">
+		<form class="col col-md-6 offset-md-1 sign-panel" action="{{ url_for('register') }}" method="POST">
             <legend class="subtitle">Hello, artist!
             <br>Please register here</legend>
 			<div class="form-group">
@@ -11,7 +11,7 @@
 					<div class="input-group-prepend">
 						<span class="input-group-text"><i class="fa fa-user form-icon"></i></span>
 					</div>
-					<input type="text" class="form-control form-input" id="username" placeholder="Choose a username" required>
+					<input type="text" class="form-control form-input" id="username" name="username" placeholder="Choose a username" pattern="^[a-zA-Z0-9]{5,20}$" required>
 			    </div>
 				</div>
 			
@@ -21,10 +21,10 @@
 					<div class="input-group-prepend">
 						<span class="input-group-text"><i class="fa fa-lock form-icon"></i></span>
 					</div>
-				<input type="text" class="form-control form-input" id="password" placeholder="Choose a password" required>
+				<input type="password" class="form-control form-input" id="password" name="password" placeholder="Choose a password" minlength="5" maxlength="20" required>
 			</div>
             </div>
-            <button class="btn btn-light btn-block" type="submit">Submit</button>
+            <button class="btn btn-light btn-block" type="submit"> <i class="fa fa-sign-in form-icon text-muted"></i></button>
 		</form>
 	</div>
 </div>
