--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="{{ url_for('register') }}">Register</a>
-          <a class="dropdown-item" href="#">Log In</a>
+          <a class="dropdown-item" href="{{ url_for('login') }}">Log In</a>
           <a class="dropdown-item" href="#">Log Out</a>
         </div>
       </li>
