Added profile.html and profile function

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block title %}
+Register to Get My Tattoo
+{% endblock %}
+
 {% block content %}
 <div class="container background-image">
 	<div class="row">
