--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,7 +42,22 @@ h4.flash{
     font-size: 30px;
     text-align: center;
     color: #E8E8E8;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
+}
+
+.name-profile{
+    font-family: "Shadow Into Light", cursive;
+    text-transform: uppercase;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: underline;
+    color: #333333;
+}
+
+.text-profile{
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    color: #333333;
 }
 
 /* Placing */
@@ -115,7 +130,7 @@ object-fit: cover;
 
 .sign-panel{
     height: 300px;
-    background-color: gray;
+    background-color: #858282;
     margin-top: 30px;
     border: 2px solid black;
     border-radius: 25px;
@@ -198,6 +213,60 @@ p.link-form a:hover{
     font-weight: bold;
 }
 
+/* Profile */
+.image-profile{
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    margin: 5px;
+}
+
+.icon-profile{
+    font-size: 20px;
+    margin: 5px;
+    color: #333333;
+}
+
+.icon-section{
+    text-align: right;
+    padding-right: 30px;
+}
+
+.information-section{
+    padding-left: 30px;
+}
+
+address.text-profile{
+    margin-bottom: 0;
+}
+
+.address-row{
+    margin-top: 60px;
+}
+
+div.container.profile-container{
+    background-color: #858282;
+    border-radius: 25px;
+}
+
+.profile-pic{
+    margin-left: 30px;
+    margin-top: 30px;
+}
+
+.bio{
+    margin-top: 60px;
+    padding-right: 30px;
+}
+
+.icon-profile.link:hover{
+    text-decoration: none;
+}
+
+img{
+    box-shadow: 0 8px 6px -6px black;
+}
+
 /* Media Queries */
 @media (max-width: 991px){
     .background-image{
@@ -217,5 +286,8 @@ p.link-form a:hover{
     }
     form.col.col-md-6.offset-md-1.sign-panel{
     margin: 0 auto;
+    }
+    .center-mobile{
+        text-align: center;
     }
 }
