--- a/templates/artists.html
+++ b/templates/artists.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block title %}
+Artists
+{% endblock %}
+
 {% block content %}
 <div class="row">
 	<div class="col-sm-12">
