--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="{{ url_for('register') }}">Register</a>
           <a class="dropdown-item" href="{{ url_for('login') }}">Log In</a>
+          <a class="dropdown-item" href="{{ url_for('profile', username=session['user']) }}">My Profile</a>
           <a class="dropdown-item" href="#">Log Out</a>
         </div>
       </li>
