--- a/templates/profile.html
+++ b/templates/profile.html
@@ -62,5 +62,6 @@
         </div>
     </div>
 	
+    <button type="button" class="btn btn-light btn-lg">Edit your profile</button>
 </div>
 {% endblock %}
