--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@ Login to Get My Tattoo
 					<div class="input-group-prepend">
 						<span class="input-group-text"><i class="fa fa-user form-icon"></i></span>
 					</div>
-					<input type="text" class="form-control form-input" id="username" name="username" placeholder="Choose a username" pattern="^[a-zA-Z0-9]{5,20}$" required>
+					<input type="text" class="form-control form-input" id="username" name="username" placeholder="Your username" pattern="^[a-zA-Z0-9]{5,20}$" required>
 			    </div>
 				</div>
 			
@@ -26,7 +26,7 @@ Login to Get My Tattoo
 					<div class="input-group-prepend">
 						<span class="input-group-text"><i class="fa fa-lock form-icon"></i></span>
 					</div>
-				<input type="password" class="form-control form-input" id="password" name="password" placeholder="Choose a password" minlength="5" maxlength="20" required>
+				<input type="password" class="form-control form-input" id="password" name="password" placeholder="Your password" minlength="5" maxlength="20" required>
 			</div>
             </div>
             <button class="btn btn-light btn-block" type="submit"> <i class="fa fa-sign-in form-icon text-muted"></i></button>
