--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,7 +46,7 @@ h4.flash{
 }
 
 .name-profile{
-    font-family: "Shadow Into Light", cursive;
+    font-family: "Shadows Into Light", cursive;
     text-transform: uppercase;
     font-size: 30px;
     font-weight: bold;
@@ -58,6 +58,12 @@ h4.flash{
     font-family: "Montserrat", sans-serif;
     font-size: 16px;
     color: #333333;
+}
+
+.text-form{
+    font-family: "Shadows Into Light", cursive;
+    color: black;
+    font-size: 25px;
 }
 
 /* Placing */
@@ -190,6 +196,8 @@ span.input-group-text{
 button{
     margin-top: 30px;
     box-shadow: 0 8px 6px -6px black;
+    font-family: "Montserrat", sans-serif;
+    text-transform: uppercase;
 }
 
 button.btn:hover, button.btn:focus{
@@ -265,6 +273,34 @@ div.container.profile-container{
 
 img{
     box-shadow: 0 8px 6px -6px black;
+}
+
+button.btn-form{
+    margin-bottom: 30px;
+}
+
+button.btn-form:hover, form.add-profile input:hover, form.add-profile textarea:hover{
+    color: #e1e1e1;
+    box-shadow: 0 0 20px #e1e1e1;
+    text-shadow: 0 0 15px #e1e1e1;
+    border: 2px solid #e6e6e6;
+}
+
+/* Add Profile */
+.add-profile{
+    color: black;
+    padding-top: 30px;
+    font-family: "Shadows Into Light", cursive;
+    font-size: 20px;
+}
+
+form.add-profile input, textarea{
+    border-radius: 25px;
+    box-shadow: 0 8px 6px -6px black;
+}
+
+form.add-profile label{
+    color: #333333;
 }
 
 /* Media Queries */
