--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@ Login to Get My Tattoo
 				<label for="username" class="d-none">Username</label>
 				<div class="input-group input-group-sm">
 					<div class="input-group-prepend">
-						<span class="input-group-text"><i class="fa fa-user form-icon"></i></span>
+						<span class="input-group-text"><i class="fas fa-user form-icon"></i></span>
 					</div>
 					<input type="text" class="form-control form-input" id="username" name="username" placeholder="Your username" pattern="^[a-zA-Z0-9]{5,20}$" required>
 			    </div>
@@ -24,12 +24,12 @@ Login to Get My Tattoo
 				<label for="password" class="d-none">Password</label>
                 <div class="input-group input-group-sm">
 					<div class="input-group-prepend">
-						<span class="input-group-text"><i class="fa fa-lock form-icon"></i></span>
+						<span class="input-group-text"><i class="fas fa-lock form-icon"></i></span>
 					</div>
 				<input type="password" class="form-control form-input" id="password" name="password" placeholder="Your password" minlength="5" maxlength="20" required>
 			</div>
             </div>
-            <button class="btn btn-light btn-block" type="submit"> <i class="fa fa-sign-in form-icon text-muted"></i></button>
+            <button class="btn btn-light btn-block" type="submit"> <i class="fas fa-sign-in-alt form-icon text-muted"></i></button>
             <div class="row">
             <div class="col-sm-12">
                 <p class="link-form">Forgot to register? 
