--- a/templates/profile.html
+++ b/templates/profile.html
@@ -18,10 +18,10 @@
                         {{ artist.artist_name }}
                     </div>
                     <div class="col-sm-12 col-md-6 icon-section center-mobile">
-                        <a href="tel:{{ artist.phone }}" class="fa fa-phone icon-profile link"></a>
-                        <a href="mailto:{{ artist.email }}" class="fa fa-at icon-profile link"></a>
-                        <a href="{{ artist.facebook }}" class="fa fa-facebook icon-profile link" target="_blank" rel="noopener"></a>
-                        <a href="{{ artist.instagram }}" class="fa fa-instagram icon-profile link" target="_blank" rel="noopener"></a>
+                        <a href="tel:{{ artist.phone }}" class="fas fa-phone icon-profile link"></a>
+                        <a href="mailto:{{ artist.email }}" class="fas fa-at icon-profile link"></a>
+                        <a href="{{ artist.facebook }}" class="fab fa-facebook icon-profile link" target="_blank" rel="noopener"></a>
+                        <a href="{{ artist.instagram }}" class="fab fa-instagram icon-profile link" target="_blank" rel="noopener"></a>
                     </div>
                 </div>
                 <div class="row address-row">
@@ -61,7 +61,11 @@
             </div>
         </div>
     </div>
-	
-    <button href="{{ url_for('edit_profile', username=session['user']) }}" type="button" class="btn btn-light btn-lg btn-form">Edit your profile</button>
+	<div class="row">
+    <div class="col-sm-12 center">
+       <button href="{{ url_for('edit_profile', username=session['user']) }}" type="button" class="btn btn-light btn-lg btn-form">Edit your profile</button>
+    </div>
+    </div>
+ 
 </div>
 {% endblock %}
