--- a/templates/add-profile.html
+++ b/templates/add-profile.html
@@ -80,7 +80,7 @@ This is your business card, so show your best!
     </div>
     <br>
     <br>
-    <p class="text-form">Now add some beautiful images to show your best art works.
+    <p class="text-form text-upload">Now add some beautiful images to show your best art works.
     Upload them on a hoisting server and provide the links.</p>
 
     <div class="form-group">
