--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -7,63 +7,121 @@ Edit {{ username }}'s profile
 {% block content %}
 <div class="container">
 <h4 class="flash">
-Make sure to add nice pictures to make your profile stand out!
+Edit your profile
 </h4>
     <div class="container profile-container">
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4 center-mobile">
-                <img src="{{ artist.profile_url }}" class="img-panel profile-pic" alt="{{ artist.artist_name }}'s profile picture'">
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-8 information-section">
-                <div class="row">
-                    <div class="col-sm-12 col-md-6 name-profile center-mobile">
-                        {{ artist.artist_name }}
-                    </div>
-                    <div class="col-sm-12 col-md-6 icon-section center-mobile">
-                        <a href="tel:{{ artist.phone }}" class="fa fa-phone icon-profile link"></a>
-                        <a href="mailto:{{ artist.email }}" class="fa fa-at icon-profile link"></a>
-                        <a href="{{ artist.facebook }}" class="fa fa-facebook icon-profile link" target="_blank" rel="noopener"></a>
-                        <a href="{{ artist.instagram }}" class="fa fa-instagram icon-profile link" target="_blank" rel="noopener"></a>
-                    </div>
-                </div>
-                <div class="row address-row">
-                    <div class="col-sm-12 center-mobile">
-                        <p class="text-profile">You can find me at:</p>
-                        <address class="text-profile font-italic">{{ artist.address }}</address>
-                        <p class="text-profile font-italic">{{ artist.city }}</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <p class="text-profile bio"><strong>Bio:</strong> <br>{{ artist.bio }}</p>
-                        <p class="text-profile"><strong>Languages spoken:</strong> {{ artist.languages }}</p>
-                        <p class="text-profile"><strong>Tattoo styles:</strong> {{ artist.style }}</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-2">
-                <img src="{{ artist.photo_1 }}" class="image-profile" alt="">
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-2">
-                <img src="{{ artist.photo_2 }}" class="image-profile" alt="">
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-2">
-                <img src="{{ artist.photo_3 }}" class="image-profile" alt="">
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-2">
-                <img src="{{ artist.photo_4 }}" class="image-profile" alt="">
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-2">
-                <img src="{{ artist.photo_5 }}" class="image-profile" alt="">
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-2">
-                <img src="{{ artist.photo_6 }}" class="image-profile" alt="">
-            </div>
-        </div>
+        
+<form class="add-profile" action="{{ url_for('edit_profile', username=session['user']) }}" method="POST">
+    <div class="form-group">
+      <label for="artist_name"><i class="fa fa-user form-icon-profile"></i> Your Name</label>
+      <input type="text" class="form-control" id="artist_name" name="artist_name" value="{{ artist.artist_name }}">
+    </div>
+
+    <div class="form-group">
+     <label for="address"><i class="fas fa-map-marked-alt"></i> Address</label>
+     <input type="text" class="form-control" id="address" name="address" value="{{ artist.address }}">
+    </div>
+
+  <div class="form-group">
+    <label for="city"><i class="fas fa-city"></i> City</label>
+    <input type="text" class="form-control" id="city" name="city" value="{{ artist.city }}">
+  </div>
+
+  <div class="form-row">
+
+    <div class="form-group col-md-6">
+      <label for="phone"><i class="fas fa-phone"></i> Phone</label>
+      <input type="phone" class="form-control" id="phone" name="phone" value="{{ artist.phone }}">
+    </div>
+
+    <div class="form-group col-md-6">
+      <label for="email"><i class="fas fa-at"></i> Email</label>
+      <input type="email" class="form-control" id="email" name="email" value="{{ artist.email }}">
+    </div>
+
+  </div>
+
+  <div class="form-row">
+
+    <div class="form-group col-md-6">
+      <label for="facebook"><i class="fab fa-facebook"></i> Facebook</label>
+      <input type="text" class="form-control" id="facebook" name="facebook" value="{{ artist.facebook }}">
+    </div>
+
+    <div class="form-group col-md-6">
+      <label for="instagram"><i class="fab fa-instagram-square"></i> Instagram</label>
+      <input type="text" class="form-control" id="instagram" name="instagram" value="{{ artist.instagram }}">
+    </div>
+
+  </div>
+
+  <div class="form-group">
+    <label for="profile_url"><i class="fas fa-user-circle"></i> Profile picture (url)</label>
+    <input type="text" class="form-control" id="profile_url" name="profile_url" value="{{ artist.profile_url }}">
+  </div>
+
+  <div class="form-row">
+
+    <div class="form-group col-md-6">
+      <label for="languages"><i class="fas fa-globe-europe"></i> Languages spoken</label>
+      <input type="text" class="form-control" id="languages" name="languages" value="{{ artist.languages }}">
+    </div>
+
+    <div class="form-group col-md-6">
+      <label for="style"><i class="fas fa-star"></i> Tattoo style(s)</label>
+      <input type="text" class="form-control" id="style" name="style" value="{{ artist.style }}">
+    </div>
+     </div>
+
+    <div class="form-group">
+        <label for="bio"><i class="fas fa-book"></i> Biography</label>
+        <textarea class="form-control" id="bio" name="bio" rows="10" value="{{ artist.bio }}"></textarea>
+    </div>
+    <br>
+    <br>
+    <p class="text-form text-upload">Now add some beautiful images to show your best art works.
+    Upload them on a hoisting server and provide the links.</p>
+
+    <div class="form-group">
+        <label for="photo_1"><i class="far fa-image"></i> Image 1 (url)</label>
+        <input type="text" class="form-control" id="photo_1" name="photo_1" value="{{ artist.photo_1 }}">
+    </div>
+
+    <div class="form-group">
+        <label for="photo_2"><i class="far fa-image"></i> Image 2 (url)</label>
+        <input type="text" class="form-control" id="photo_2" name="photo_2" value="{{ artist.photo_2 }}">
+    </div>
+
+    <div class="form-group">
+        <label for="photo_3"><i class="far fa-image"></i> Image 3 (url)</label>
+        <input type="text" class="form-control" id="photo_3" name="photo_3" value="{{ artist.photo_3 }}">
+    </div>
+
+    <div class="form-group">
+        <label for="photo_4"><i class="far fa-image"></i> Image 4 (url)</label>
+        <input type="text" class="form-control" id="photo_4" name="photo_4" value="{{ artist.photo_4 }}">
+    </div>
+
+    <div class="form-group">
+        <label for="photo_5"><i class="far fa-image"></i> Image 5 (url)</label>
+        <input type="text" class="form-control" id="photo_5" name="photo_5" value="{{ artist.photo_5 }}">
+    </div>
+
+    <div class="form-group">
+        <label for="photo_6"><i class="far fa-image"></i> Image 6 (url)</label>
+        <input type="text" class="form-control" id="photo_6" name="photo_6" value="{{ artist.photo_6 }}">
+    </div>
+
+<div class="row">
+<div class="col-sm-12 center">
+<button type="submit" class="btn btn-light btn-lg btn-form">Save <i class="fas fa-cloud-upload-alt"></i></button>
+<button type="submit" class="btn btn-light btn-lg btn-form" href="{{ url_for('profile', username=session['user']) }}">Cancel <i class="fas fa-trash-alt"></i></button>
+</div>
+</div>
+  </form>
+
+
     </div>
 	
-    <button type="button" class="btn btn-light btn-lg">Save</button>
 </div>
 {% endblock %}
