--- a/templates/profile.html
+++ b/templates/profile.html
@@ -63,7 +63,7 @@
     </div>
 	<div class="row">
     <div class="col-sm-12 center">
-       <button href="{{ url_for('edit_profile', username=session['user']) }}" type="button" class="btn btn-light btn-lg btn-form">Edit your profile</button>
+       <a href="{{ url_for('edit_profile', username=session['user']) }}" type="submit" class="btn btn-light btn-lg btn-form">Edit <i class="fas fa-pen-fancy"></i></a>
     </div>
     </div>
  
