Added show artist page and functionality

--- a/templates/add-profile.html
+++ b/templates/add-profile.html
@@ -65,12 +65,12 @@ This is your business card, so show your best!
 
     <div class="form-group col-md-6">
       <label for="languages"><i class="fas fa-globe-europe"></i> Languages spoken</label>
-      <input type="text" class="form-control" id="languages" name="languages" required>
+      <input type="text" class="form-control" id="languages" name="languages">
     </div>
 
     <div class="form-group col-md-6">
       <label for="style"><i class="fas fa-star"></i> Tattoo style(s)</label>
-      <input type="text" class="form-control" id="style" name="style" required>
+      <input type="text" class="form-control" id="style" name="style">
     </div>
      </div>
 
@@ -85,32 +85,32 @@ This is your business card, so show your best!
 
     <div class="form-group">
         <label for="photo_1"><i class="far fa-image"></i> Image 1 (url)</label>
-        <input type="url" class="form-control" id="photo_1" name="photo_1" placeholder="Add link" required>
+        <input type="url" class="form-control" id="photo_1" name="photo_1" placeholder="Add link">
     </div>
 
     <div class="form-group">
         <label for="photo_2"><i class="far fa-image"></i> Image 2 (url)</label>
-        <input type="url" class="form-control" id="photo_2" name="photo_2" placeholder="Add link" required>
+        <input type="url" class="form-control" id="photo_2" name="photo_2" placeholder="Add link">
     </div>
 
     <div class="form-group">
         <label for="photo_3"><i class="far fa-image"></i> Image 3 (url)</label>
-        <input type="url" class="form-control" id="photo_3" name="photo_3" placeholder="Add link" required>
+        <input type="url" class="form-control" id="photo_3" name="photo_3" placeholder="Add link">
     </div>
 
     <div class="form-group">
         <label for="photo_4"><i class="far fa-image"></i> Image 4 (url)</label>
-        <input type="url" class="form-control" id="photo_4" name="photo_4" placeholder="Add link" required>
+        <input type="url" class="form-control" id="photo_4" name="photo_4" placeholder="Add link">
     </div>
 
     <div class="form-group">
         <label for="photo_5"><i class="far fa-image"></i> Image 5 (url)</label>
-        <input type="url" class="form-control" id="photo_5" name="photo_5" placeholder="Add link" required>
+        <input type="url" class="form-control" id="photo_5" name="photo_5" placeholder="Add link">
     </div>
 
     <div class="form-group">
         <label for="photo_6"><i class="far fa-image"></i> Image 6 (url)</label>
-        <input type="url" class="form-control" id="photo_6" name="photo_6" placeholder="Add link" required>
+        <input type="url" class="form-control" id="photo_6" name="photo_6" placeholder="Add link">
     </div>
 
 <div class="row">
