--- a/static/css/style.css
+++ b/static/css/style.css
@@ -264,6 +264,7 @@ div.container.profile-container{
 .profile-pic{
     margin-left: 30px;
     margin-top: 30px;
+    max-width: 300px;
 }
 
 .bio{
