--- a/templates/artists.html
+++ b/templates/artists.html
@@ -25,7 +25,7 @@ Artists
 						<div class="col col-sm-12 col-md-6">
 							<h5 class="card-title">{{ artist.artist_name }}</h5>
 							<p class="card-text">{{ artist.bio }}</p>
-							<a href="#" class="link">Go to {{ artist.artist_name }}'s page</a>
+							<a href="{{ url_for('show_artist', artist_id=artist._id) }}" class="link">Go to {{ artist.artist_name }}'s page</a>
 						</div>
 					</div>
 				</div>
