--- a/templates/base.html
+++ b/templates/base.html
@@ -39,8 +39,8 @@
         </div>
       </li>
     </ul>
-    <form class="form-inline ml-auto p-2">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search">
+    <form class="form-inline ml-auto p-2" action="{{ url_for('search') }}" method="POST">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" name="query" id="query" required>
       <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
