--- a/templates/artist-page.html
+++ b/templates/artist-page.html
@@ -9,7 +9,7 @@
 
     <div class="container profile-container">
         <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4 center-mobile">
+            <div class="col-sm-12 col-md-6 col-lg-4 center">
                 <img src="{{ artist.profile_url }}" class="img-panel profile-pic" alt="{{ artist.artist_name }}'s profile picture'">
             </div>
             <div class="col-sm-12 col-md-6 col-lg-8 information-section">
