--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,10 +8,10 @@ html {
   font-size: 10px;
 }
 
-body {
+html, body {
   margin: auto;
   padding: 0;
-  width: 100vw;
+  width: 96vw;
 }
 
 /* Colours */
@@ -29,8 +29,53 @@ a.navbar-brand.logo, a.nav-link {
 }
 
 /* Typography */
-.logo{
+.logo, h2{
     font-family: "Montserrat", sans-serif;
+}
+
+.welcome-title{
+    font-family: "Montserrat", sans-serif;
+    font-size: 3rem;
+}
+
+.welcome-text{
+    font-family: "Montserrat", sans-serif;
+    font-size: 1.6rem;
+}
+
+h5.card-title{
+    font-size: 3rem;
+    letter-spacing: 0.2rem;
+    font-family: "Shadows Into Light", cursive;
+    color: #333333;
+    font-weight: bold;
+}
+
+p.card-text{
+    font-size: 1.5rem;
+    font-family: "Montserrat", sans-serif;
+}
+
+a.link{
+    font-size: 1.5rem;
+    font-family: "Montserrat", sans-serif;
+}
+
+a.nav-link, a.dropdown-item{
+    font-size: 1.5rem;
+    font-family: "Montserrat", sans-serif;
+}
+
+strong{
+    font-size: 1.5rem;
+}
+
+a.btn{
+    font-size: 2rem;
+}
+
+i{
+    font-size: 2rem;
 }
 
 main div h1.center{
@@ -94,6 +139,52 @@ h4.flash{
     margin-top: 3rem;
     margin-bottom: 6rem;
 }
+
+/* Welcome section */
+
+.welcome{
+    margin: 3rem 3rem 6rem 3rem;
+    position: relative;
+}
+
+.welcome-image img {
+  height: 50rem;
+  
+}
+
+.overlay-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* Ideas Cards */
+
+.ideas{
+    margin-bottom: 6rem;
+}
+
+.card-img-top{
+    height: 28rem;
+    object-fit: cover;
+}
+
+.card-body{
+    background-color: #858282;
+}
+
+/* Search Bar */
+.search-bar{
+    width: 40rem;
+    height: 3rem;
+    margin: auto;
+    
+}
+
 
 /* Navbar */
 .logo {
